# ostap

./: .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CTestCustom.cmake  Dockerfile  FAQ.md  INSTALL.md  LICENSE  LICENSE.txt  README.md  README.rst  SWAN.md  azure-pipelines.yml  more.sh  osX-pipelines.yml  setup.py  template-pipelines.yml  v3.0.2.8.md
docs/: CMakeLists.txt  MAIN.md  Makefile  OstapDoxy.cfg.in  about.rst  conf.py  contributing.rst  documentation.rst  faq.rst  index.rst  installation.rst  math.rst  references.rst  start.rst
docs/classes/: OstapMath.rst  ValueWithError.rst
docs/modules/: math_ve.rst
examples/: CMakeLists.txt  README.md  rootlogon.C  rootlogon.C.in
examples/histos/: histos_ex001_basic.py  histos_ex002_operators.py  histos_ex003_interpolation.py  histos_ex004_interpolation.C
examples/math/: math_ex001_functions.py  math_ex002_interpolation.cpp  math_ex003_rootfinding.py
examples/python/: example.py
examples/root/: example.C  loadostap.C  rootlogon.C
ostap/: CMakeLists.txt  __init__.py  __init__.py.in
ostap/contribs/: README.md
ostap/core/: CMakeLists.txt  CONFIGURATION_FAQ.md  README.md  __init__.py  base.py  build_dir.py  cache_dir.py  config.py  core.py  core_base.py  cpu_info.py  default_config.py  footprint.py  known_issues.py  load_ostap.py  meta_info.py  ostap_setup.py  ostap_types.py  parse_args.py  pyrouts.py  run_ostap.py  runostap.py  startup.py  types.py  workdir.py
ostap/fitting/: CONSTRAINTS.md  DATASETS.md  FAQ.md  FITTING.md  README.md  SIMFIT.md  __init__.py  adjust.py  background.py  basic.py  chi2fit.py  constraint.py  convolution.py  dataset.py  distributions.py  ds2numpy.py  efficiency.py  fit1d.py  fit2d.py  fit3d.py  fithelpers.py  fitresult.py  funbasic.py  funcs.py  minuit.py  models.py  models_2d.py  models_3d.py  modifiers.py  morphing_pdf.py  param.py  pdf_ops.py  pdfbasic.py  printable.py  pypdf.py  pyselectors.py  pyvar.py  resolution.py  roocmdarg.py  roocollections.py  (+16 more)
ostap/fixes/: README.md  fixes.py
ostap/frames/: README.md  __init__.py  frame2histo.py  frames.py  tree_reduce.py
ostap/histos/: README.md  __init__.py  axes.py  compare.py  graph_reduce.py  graphs.py  histos.py  param.py  roc.py
ostap/io/: README.md  bz2shelve.py  checker.py  compress_shelve.py  dbase.py  duckdbdict.py  dump_root.py  files.py  lmdbdict.py  lzshelve.py  pickling.py  pklprotocol.py  root_file.py  rootfiles.py  rootshelve.py  shelve_ext.py  sqlitedict.py  sqliteshelve.py  tfile_deco.py  tkrzwdict.py  utils.py  zipshelve.py  zstshelve.py
ostap/logger/: README.md  __init__.py  colorized.py  graphics.py  line.py  logger.py  mute.py  pretty.py  symbols.py  table.py  utils.py
ostap/math/: README.md  __init__.py  base.py  bernstein.py  bspline.py  convolution.py  covtransform.py  dalitz.py  delevie.py  deriv.py  derivative.py  finitediffs.py  geometry.py  integral.py  integrator.py  interpolation.py  interpolation2.py  karlin.py  kinematic.py  linalg.py  linalg2.py  linalg_old.py  linalgg.py  linalgt.py  local_minimize.py  make_fun.py  math_base.py  math_ve.py  minimize.py  minopts.py  models.py  more_reduce.py  operations.py  other.py  param.py  polynomials.py  primes.py  random_ext.py  reduce.py  rootfinder.py  (+3 more)
ostap/parallel/: PARALLEL.md  README.md  kisa.py  mp_gaudi.py  mp_pathos.py  parallel.py  parallel_add_branch.py  parallel_add_reweighting.py  parallel_chopping.py  parallel_copy.py  parallel_fill.py  parallel_futures.py  parallel_gaudi.py  parallel_gof.py  parallel_gof1d.py  parallel_ipyparallel.py  parallel_joblib.py  parallel_pathos.py  parallel_project.py  parallel_reduce.py  parallel_statvar.py  parallel_tmva.py  parallel_toys.py  pptunnel.py  task.py  utils.py
ostap/plotting/: FITDRAW.md  README.md  __init__.py  canvas.py  color.py  draw_attributes.py  fit_draw.py  graph_summary.py  makestyles.py  style.py
ostap/stats/: README.md  adval.py  adversarial_validation.py  average.py  bootstrap.py  combine.py  corr2d.py  counters.py  data_compare.py  funcs.py  funstats.py  gof.py  gof1d.py  gof_1d.py  gof_np.py  gof_simfit.py  gof_utils.py  gofnd.py  moment.py  moments.py  pragmastat.py  statvars.py  sweet_viz.py  twosamples.py  ustat.py
ostap/testing/: run_examples
ostap/tools/: README.md  chopping.py  data_reweighter.py  evolution.py  reweight.py  reweighter.py  reweighters.py  splot.py  tmva.py
ostap/trees/: README.md  base.py  cuts.py  data.py  data_utils.py  funcs.py  param.py  treereduce.py  trees.py  trees_base.py  utils.py
ostap/utils/: README.md  basic.py  cidict.py  cleanup.py  clsgetter.py  docme.py  env.py  files.py  gsl.py  hepdata.py  memory.py  parallel_copy.py  pdg_format.py  progress_bar.py  progress_conf.py  random_seed.py  ranges.py  root_utils.py  scp_copy.py  source_env.py  strings.py  timing.py  utils.py  valerrors.py
scripts/: .ostaprc.in  .rootlogon.C.in  .thisostap.csh.in  .thisostap.fish.in  .thisostap.sh.in  CMakeLists.txt  bootstrap  build-docker  check-dependencies  coverage  example.C  lcg_dev.sh  ostap  ostap-check-dependencies  ostap-sync-dirs  ostap-table  pplaunch  rootlogon.C.in  setup.sh  sync-dirs  test  test_with_lcg  thisostap.sh.in
source/: CMakeLists.txt  CMakeROOT_6_14.cmake  CMakeROOT_6_16.cmake  CMakeROOT_6_23.cmake  CMake_OSTAP.cmake  build.config.in
source/include/: PDFs.h  PDFs2D.h
source/lcg_94_93/: CMakeList.txt
source/src/: AdHocShapes.cpp  AddBranch.cpp  AddBuffer.cpp  AddVars.cpp  BLOB.cpp  BSpline.cpp  Bernstein.cpp  Bernstein1D.cpp  Bernstein2D.cpp  Bernstein3D.cpp  Bernulli.cpp  Binomial.cpp  BreitWigner.cpp  COWs.cpp  CallPython.h  ChebyshevApproximation.cpp  Chi2Fit.cpp  Choose.cpp  Clausen.cpp  Combine.cpp  CornishFisher.cpp  Covariance.cpp  Covariances.cpp  Dalitz.cpp  DalitzIntegrator.cpp  DataFrameActions.cpp  DataFrameUtils.cpp  Differences.cpp  ECDF.cpp  EPDF.cpp  EffEntity.cpp  EigenSystem.cpp  Error2Exception.cpp  Exception.cpp  Exception.h  Extrema.cpp  Extremum1D.cpp  Extremum1D.h  FitResult.cpp  Formula.cpp  (+147 more)
src/: CMakeLists.txt  LinkDef.h  ValueWithError.cpp
src/dict/: Dict.h  (+1 more)
(+663 files in other folders)
