configure_file (
  "${CMAKE_CURRENT_SOURCE_DIR}/rootlogon.C.in"
  "${CMAKE_CURRENT_BINARY_DIR}/rootlogon.C" @ONLY
  )

install ( FILES ${CMAKE_CURRENT_BINARY_DIR}/rootlogon.C  
           DESTINATION examples 
           PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
           
install ( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}  
          DESTINATION . 
          FILES_MATCHING PATTERN "*.py"
          PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

install ( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}  
          DESTINATION .  
          FILES_MATCHING PATTERN "*.C"
          PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

install ( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}  
          DESTINATION .  
          FILES_MATCHING PATTERN "*.C"
          PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

install ( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}  
          DESTINATION .  
          FILES_MATCHING PATTERN "*.cpp"
          PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
   
install ( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}  
          DESTINATION .  
          FILES_MATCHING PATTERN "*.cxx"
          PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
   
